# cmake_cpp_project_generator

./: .clang-format  CMakeLists.txt  README.md  setup.sh
cmake/: AddCatch2Tests.cmake  Coverage.cmake
include/{{REPLACE_ME_PROJECT_NAME}}/: {{REPLACE_ME_PROJECT_NAME}}.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
{{REPLACE_ME_PROJECT_NAME}}/app/src/: CMakeLists.txt
{{REPLACE_ME_PROJECT_NAME}}/app/tests/: CMakeLists.txt
{{REPLACE_ME_PROJECT_NAME}}/apps/template/src/: CMakeLists.txt  {{REPLACE_ME_APP_NAME}}.cpp
{{REPLACE_ME_PROJECT_NAME}}/apps/template/tests/: CMakeLists.txt
